--- a/package.json
+++ b/package.json
@@ -11,35 +11,18 @@
     "Jared Nagle"
   ],
   "dependencies": {
-    "concat-stream": "^1.4.7",
-    "readable-stream": "^1.0.33",
-    "split": "^0.3.2",
     "through2": "^0.6.3",
     "vinyl-fs": "^0.3.13"
   },
   "description": "Use regular expressions to shuffle around text!",
   "devDependencies": {
-    "del": "^1.1.0",
-    "describe": "^1.2.0",
     "event-stream": "^3.1.7",
-    "gulp": "^3.8.10",
-    "gulp-build": "^0.5.3",
-    "gulp-bump": "^0.1.11",
-    "gulp-cat": "^0.3.1",
-    "gulp-concat-json": "^1.0.0",
-    "gulp-connect": "^2.2.0",
-    "gulp-debug": "^1.0.1",
-    "gulp-git": "^0.5.5",
-    "gulp-jshint": "^1.9.0",
-    "gulp-karma": "0.0.4",
-    "gulp-mocha": "^2.0.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-util": "^3.0.1",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.28",
     "mocha": "^2.0.1",
+    "mocha-jshint": "0.0.9",
     "should": "^4.3.0",
-    "vinyl-fs": "^0.3.13"
+    "vinyl": "^0.4.6"
   },
   "engines": {
     "node": ">=0.10.0"
