--- a/package.json
+++ b/package.json
@@ -11,21 +11,20 @@
     "Jared Nagle"
   ],
   "dependencies": {
+    "gulp-util": "^3.0.1",
     "through2": "^0.6.3",
     "vinyl-fs": "^0.3.13"
   },
   "description": "Use regular expressions to shuffle around text!",
   "devDependencies": {
     "event-stream": "^3.1.7",
-    "jshint-stylish": "^1.0.0",
     "karma": "^0.12.28",
     "mocha": "^2.0.1",
     "mocha-jshint": "0.0.9",
-    "should": "^4.3.0",
     "vinyl": "^0.4.6"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=0.8.0"
   },
   "homepage": "http://thenaglecode.com/npm/gulp-regex-shuffler",
   "keywords": [
